--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,5 @@
-add_library(MSRRegister STATIC MSRRegister.cpp)
-target_include_directories(MSRRegister PUBLIC ../include)
+add_library(Registers STATIC MSRRegister.cpp CPUIDRegister.cpp BitDescriptor.cpp)
+target_include_directories(Registers PUBLIC ../include)
+
+add_executable(RyzMasterRace-qt RyzMasterRace-qt.cpp)
+target_link_libraries(RyzMasterRace-qt Registers Qt5::Core Qt5::Widgets)
