--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,2 +1,8 @@
 add_executable(MSRtest MSRtest.cpp)
-target_link_libraries(MSRtest MSRRegister)
+target_link_libraries(MSRtest Registers)
+
+add_executable(CPUIDtest CPUIDtest.cpp)
+target_link_libraries(CPUIDtest Registers)
+
+add_executable(PCItest PCItest.c)
+target_link_libraries(PCItest pci)
